--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -424,6 +424,12 @@
     <Compile Include="FlowTreeEditors\Scene\SceneSectionEditor.Designer.cs">
       <DependentUpon>SceneSectionEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmCR2WtoText.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmCR2WtoText.Designer.cs">
+      <DependentUpon>frmCR2WtoText.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmImportUtility.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -711,6 +717,9 @@
     <EmbeddedResource Include="Forms\frmAddVariable.resx">
       <DependentUpon>frmAddVariable.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmCR2WtoText.resx">
+      <DependentUpon>frmCR2WtoText.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmImportUtility.resx">
       <DependentUpon>frmImportUtility.cs</DependentUpon>
