MVVM and Radish
- some mock MVVM utility for winforms
- RadishUtility: automatic scriptlog parsing
- radish settings integrated in the form

--- a/Wolvenkit.Radish/Wolvenkit.Radish.csproj
+++ b/Wolvenkit.Radish/Wolvenkit.Radish.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\RadishBatFile.cs" />
+    <Compile Include="Model\RadishBatFileWrapper.cs" />
     <Compile Include="Model\RadishWorkflow.cs" />
     <Compile Include="WitcherTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
