--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -208,6 +208,8 @@
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Controllers\Configuration.cs" />
     <Compile Include="Controllers\MainController.cs" />
+    <Compile Include="Controllers\RadishController.cs" />
+    <Compile Include="MockKernel.cs" />
     <Compile Include="Model\Commonfunctions.cs" />
     <Compile Include="Model\SearchParameters.cs" />
     <Compile Include="Model\WKPackage.cs" />
