progress reporting and bugfix
- fixed a bug where saving files with embedded entities would corrupt the file
- fixed a bug where saving files with buffers would corrupt the file
- added threadsafe progress reporting to the Maincontroller.Logger
- added a file loading progress backgroundworker

--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -217,6 +217,7 @@
     <Compile Include="Controllers\RadishConfiguration.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
+    <Compile Include="ViewModels\CR2WDocumentViewModel.cs" />
     <Compile Include="ViewModels\RadishViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
   </ItemGroup>
