--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -219,6 +219,8 @@
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\RadishController.cs" />
     <Compile Include="MockKernel.cs" />
+    <Compile Include="Model\Arguments\FileSavedEventArgs.cs" />
+    <Compile Include="Model\Arguments\SelectChunkArgs.cs" />
     <Compile Include="Model\Commonfunctions.cs" />
     <Compile Include="Model\ImportModel.cs" />
     <Compile Include="Model\SearchParameters.cs" />
