--- a/WolvenKit.Cache/packages.config
+++ b/WolvenKit.Cache/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
+  <package id="Pfim" version="0.9.1" targetFramework="net48" />
 </packages>
