--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Types\W3\ISerializable\IScriptable\CObject\IParticleModule\CParticleInitializerAlpha.cs" />
     <Compile Include="Types\W3\CCameraCompressedPose.cs" />
     <Compile Include="Types\W3\Structs\SAnimPointCloudLookAtParamData.cs" />
+    <Compile Include="Types\W3\Structs\SMipData.cs" />
     <Compile Include="Types\W3\Structs\SSectorDataResource.cs" />
     <Compile Include="Types\W3\Structs\SSectorDataObject.cs" />
     <Compile Include="Types\W3\Structs\SBlockData.cs" />
