--- a/WolvenKit.Console/packages.config
+++ b/WolvenKit.Console/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.8.0" targetFramework="net48" />
+  <package id="ConsoleProgressBar" version="1.0.1" targetFramework="net48" />
 </packages>
