--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -80,6 +80,7 @@
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="UsefulCSharpThings" version="1.7.3" targetFramework="net48" />
