--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -541,7 +541,6 @@
       <DependentUpon>frmAbout.cs</DependentUpon>
     </Compile>
     <Compile Include="Utility\CopyController.cs" />
-    <Compile Include="Arguments\FileSavedEventArgs.cs" />
     <Compile Include="Forms\frmDebug.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -607,12 +606,6 @@
     </Compile>
     <Compile Include="Forms\frmTextInput.Designer.cs">
       <DependentUpon>frmTextInput.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\frmTextureFile.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\frmTextureFile.Designer.cs">
-      <DependentUpon>frmTextureFile.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmWCCLicense.cs">
       <SubType>Form</SubType>
@@ -720,8 +713,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Arguments\RequestFileOpenArgs.cs" />
-    <Compile Include="Arguments\SelectChunkArgs.cs" />
     <Compile Include="Win32.cs" />
     <EmbeddedResource Include="FlowTreeEditors\Scene\SceneFlowConditionEditor.resx">
       <DependentUpon>SceneFlowConditionEditor.cs</DependentUpon>
@@ -829,6 +820,9 @@
     <EmbeddedResource Include="Forms\frmAnims.resx">
       <DependentUpon>frmAnims.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmScriptEditor.resx">
+      <DependentUpon>frmScriptEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
@@ -846,9 +840,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmTextInput.resx">
       <DependentUpon>frmTextInput.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmTextureFile.resx">
-      <DependentUpon>frmTextureFile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmWCCLicense.resx">
       <DependentUpon>frmWCCLicense.cs</DependentUpon>
