--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -348,6 +348,9 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -457,6 +460,12 @@
     </Compile>
     <Compile Include="Forms\frmRadish.Designer.cs">
       <DependentUpon>frmRadish.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmCR2WtoText.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmCR2WtoText.Designer.cs">
+      <DependentUpon>frmCR2WtoText.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmImportUtility.cs">
       <SubType>Form</SubType>
@@ -740,6 +749,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmRadish.resx">
       <DependentUpon>frmRadish.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmCR2WtoText.resx">
+      <DependentUpon>frmCR2WtoText.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmImportUtility.resx">
       <DependentUpon>frmImportUtility.cs</DependentUpon>
@@ -1072,6 +1084,7 @@
     <Content Include="Resources\VisualStudio\Run_16x.png" />
     <Content Include="Resources\CustomImages\UpButton.png" />
     <Content Include="Resources\CustomImages\XToCloseButton.png" />
+    <None Include="Resources\TextFileIcon64px.png" />
     <Content Include="wolven_kit_icon.ico" />
     <None Include="Resources\RedEngine\ExitIcon.png" />
     <None Include="Resources\RedEngine\LayerGroupVisibled.png" />
