Copy Paste can replace entiry CVariables
- added a function to replace a variable in the chunk properties additional to adding subvariables

--- a/Wolvekit.Nvidia/WolvenKit.Nvidia.csproj
+++ b/Wolvekit.Nvidia/WolvenKit.Nvidia.csproj
@@ -100,6 +100,10 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj">
+      <Project>{4d1019f1-f099-450f-85b8-697e0332a94f}</Project>
+      <Name>WolvenKit.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WolvenKit.CR2W\WolvenKit.CR2W.csproj">
       <Project>{f3129e02-31ad-4327-a9ef-7c52d777c71f}</Project>
       <Name>WolvenKit.CR2W</Name>
