--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -108,6 +108,8 @@
     <Compile Include="Extensions\FileSystemInfoExtensions.cs" />
     <Compile Include="Model\Arguments\BundleFileExtractArgs.cs" />
     <Compile Include="Model\Arguments\RequestFileOpenArgs.cs" />
+    <Compile Include="Model\IWolvenkitDocument.cs" />
+    <Compile Include="Model\IWolvenkitFile.cs" />
     <Compile Include="Tools\AlphanumComparator.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Tools\FNV1A\FNV1A32HashAlgorithm.cs" />
