Uncooking and Exporting
- integrated wcc_lite depot for wkit
- MainViewModel
- ModExplorer ViewModel
- uncooking in Asset Browser
- export w2mesh to fbx

--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -401,6 +401,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MockKernel.cs" />
     <Compile Include="Utility\DDSUtility.cs" />
     <Compile Include="discord.cs" />
     <Compile Include="Extensions\CustomFloatWindow.cs">
