Documentation commit.  - Dropped in a doxygen.conf. Tweaked some file to make doxygen happy :    in xmldoccomments backslashes need to be escaped, and in markdown strict title hierarchy needed.  - Added few high-level comments in code.  - (Added wiki entries, but github wikis are external repos.)

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,5 @@
 
 # CA1712: Do not prefix enum values with type name
 dotnet_diagnostic.CA1712.severity = none
+
+vc_generate_documentation_comments = xml
