- Show frmUnitTest even during debug
- Some various optimizations for GenerateStringTable
  Hashtables-based containers instead of lists.

- Various attempts at making GenerateStringTable easier to read :
  structs as method return values and params, if -> switch.

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -109,6 +109,7 @@
     <Compile Include="CR2W\CR2WEmbedded.cs" />
     <Compile Include="CR2W\CR2WExport.cs" />
     <Compile Include="CR2W\CR2WFile.cs" />
+    <Compile Include="CR2W\CR2WFileHelpers.cs" />
     <Compile Include="CR2W\CR2WHeaderData.cs" />
     <Compile Include="CR2W\CR2WHeaderStructs.cs" />
     <Compile Include="CR2W\CR2WImport.cs" />
