Forced the main form to be brought on front of the window manager stack after closing the asset browser.
Project solution : AnyCpu

Forced the main form to have controls.

Renamed a few functions.

--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,7 @@ packages/**
 
 #Ignore doxygen doc
 docs/html/*
+docs/doxygen.warnings
 
 #Local git wiki repository - preferred to not delve into git submodules/subtree horrors
 Wolven-kit.wiki
