--- a/WolvenKit.App/packages.config
+++ b/WolvenKit.App/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="Pfim" version="0.9.1" targetFramework="net48" />
   <package id="protobuf-net" version="2.4.6" targetFramework="net48" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
