--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -111,6 +111,13 @@
     <Compile Include="Model\IWolvenkitFile.cs" />
     <Compile Include="Tools\AlphanumComparator.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Tools\DDSUtils.cs" />
+    <Compile Include="Tools\DDS\DDS_ENUMS.cs" />
+    <Compile Include="Tools\DDS\DDS_HEADER.cs" />
+    <Compile Include="Tools\DDS\DDS_HEADER_DXT10.cs" />
+    <Compile Include="Tools\DDS\DDS_Metadata.cs" />
+    <Compile Include="Tools\DDS\DDS_PIXELFORMAT.cs" />
+    <Compile Include="Tools\DDS\Texconv.cs" />
     <Compile Include="Tools\FNV1A\FNV1A32HashAlgorithm.cs" />
     <Compile Include="Tools\FNV1A\FNV1A64HashAlgorithm.cs" />
     <Compile Include="Model\IWitcherArchive.cs" />
@@ -138,6 +145,11 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Tools\DDS\texconv.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
