--- a/WolvenKit.App/packages.config
+++ b/WolvenKit.App/packages.config
@@ -10,6 +10,7 @@
   <package id="Pfim" version="0.9.1" targetFramework="net48" />
   <package id="protobuf-net" version="2.4.6" targetFramework="net48" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net48" />
+  <package id="SymbolicLinkSupport" version="1.2.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
