bulk editor + mod workflow
- smart dlc name detection v2
- fix bulk editor

--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -177,6 +177,9 @@
     <Reference Include="Doboz">
       <HintPath>..\packages\doboz4net.1.0.1\lib\net40-client\Doboz.dll</HintPath>
     </Reference>
+    <Reference Include="FastMember, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FastMember.1.5.0\lib\net461\FastMember.dll</HintPath>
+    </Reference>
     <Reference Include="format, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\packages\VGMToolbox.1.0.0.1040\lib\format.dll</HintPath>
     </Reference>
