--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -13,6 +13,7 @@
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net48" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net48" />
+  <package id="FastMember" version="1.5.0" targetFramework="net48" />
   <package id="IniParserLTK" version="1.1.5" targetFramework="net461" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net48" />
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
